<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clipToPadding="false"
    tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exercise">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/exercise_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sets_inputlayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/sets">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sets_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reps_inputlayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/reps">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reps_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/choices_inputlayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/choices">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/choices_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <com.genenakagaki.myhandycoach.view.DurationPicker
        android:id="@+id/rest_duration_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_card_enabled"
        android:elevation="2dp"
        app:enabled_label="@string/rest_duration"
        app:show_switch="false"/>

    <com.genenakagaki.myhandycoach.view.DurationPicker
        android:id="@+id/duration_picker_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card_enabled"
        android:elevation="2dp"
        app:enabled_label="@string/regular_set_duration_enabled"
        app:disabled_label="@string/regular_set_duration_disabled"/>

    <Button
        android:id="@+id/discard_changes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_discard_changes"/>

</LinearLayout>
