<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Time picker label -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:padding="8dp">

                <Switch
                    android:id="@+id/enable_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:checked="true"/>

                <TextView
                    android:id="@+id/label_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="Rest time" />
            </RelativeLayout>

            <!-- Time picker -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/minutes_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_minutes"
                        android:textSize="12sp"/>

                    <NumberPicker
                        android:id="@+id/minutes_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"/>

                </LinearLayout>

                <NumberPicker
                    android:id="@+id/colon_picker"
                    android:layout_width="10dp"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom"
                    android:focusable="false"
                    android:clickable="false"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/seconds_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_seconds"
                        android:textSize="12sp"/>

                    <NumberPicker
                        android:id="@+id/seconds_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/error"
            android:text="@string/exercise_setting_error_empty_duration"
            android:visibility="gone"/>

    </LinearLayout>
</merge>